[package]
name = "urm"
description = "A reinvented wheel for simple repository management"
version = "0.1.0"
authors = ["Junde Yhi <lmy441900@aosc.xyz>"]
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/lmy441900/urm"
edition = "2018"

[dependencies]
rocket = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12"
rust-argon2 = "0.8"
toml = "0.5"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["helmet", "serve", "json", "tera_templates", "mongodb_pool"]

[workspace]
members = ["utils/genuser"]
